--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,29 @@
 
-.grid{
+
+
+.game-info-container{
+	display: block;
+	height: 60px;
+	background-color: gray;
+	margin: 0 0 30px 0;
+	width: 512px;
+}
+
+.section{
+	text-align: center;
+	color: #DDD;
+	display: inline-block;
+	margin: 0 auto;
+}
+
+#score{
+	color: white;
+	font-weight: bold;
+	font-size: 36px;
+	display: inline;
+}
+
+#grid{
 	position: relative;
 }
 
